Fix Dark Mode in grid, flexbox & box-alignment properties (#2039)

--- a/live-examples/css-examples/grid/function-minmax.css
+++ b/live-examples/css-examples/grid/function-minmax.css
@@ -1,7 +1,5 @@
 #example-element {
-    background-color: #eee;
-    border: .75em solid;
-    padding: .75em;
+    border: 1px solid #c5c5c5;
     display: grid;
     grid-gap: 10px;
     width: 250px;
